documentacion/obtenida/ARINC 429/driver and software/LX-AFDX-1/API/AX1W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned char BYTE;
typedef unsigned char * LPBYTE;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef unsigned long HVL;
typedef unsigned long HPORT;
typedef const char * LPCSTR;
typedef char * LPSTR;
typedef int BOOL;
typedef int HCARD;
typedef HCARD * LPHCARD;
typedef int ERRVAL;
typedef struct 
{
    USHORT offset;
    USHORT ds1_len;
    USHORT ds2_len;
    USHORT ds3_len;
    USHORT ds4_len;
} FDSDESC;

AX1W32API LPCSTR __stdcall AX1_ErrDesc(INT errval);

AX1W32API LPCSTR __stdcall AX1_ErrDescStr(INT errval);

AX1W32API LPCSTR __stdcall AX1_ErrName(INT errval);

AX1W32API ERRVAL __stdcall AX1_ErrNetGetEnable(LPULONG pconfigval,LPUSHORT ptrigid,USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_ErrPktGetConfig(LPULONG pconfigval,LPULONG pblendflags,HPORT hport,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_ErrPktGetConfigEx(LPULONG pconfigval,LPULONG pblendflags,LPUSHORT ptrigid,LPBYTE packet,USHORT pktlen,LPUSHORT ptotallen,HPORT hport,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_ErrRSNGetConfig(LPULONG pconfigval,LPUSHORT ptrigid,LPINT pmodifier,HVL hvl,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_ErrXmtGetConfig(LPULONG pconfigval,LPUSHORT ptrigid,HPORT hport,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_EventGetConfig(LPULONG pconfigval,HCARD handleval);

AX1W32API VOID __stdcall AX1_ExpandMant(LPULONG mant,LPINT exp);

AX1W32API INT __stdcall AX1_FDSCalcOffset(LPBYTE buf,FDSDESC fds_desc,INT ds_num);

AX1W32API BYTE __stdcall AX1_FDSStatusPriority(BYTE prevstatus,BYTE status);

AX1W32API VOID __stdcall AX1_FileClose();

AX1W32API BOOL __stdcall AX1_FileErr(VOID);

AX1W32API VOID __stdcall AX1_FileErrClr(VOID);

AX1W32API VOID __stdcall AX1_FileErrSet(VOID);

AX1W32API LPVOID __stdcall AX1_FileOpenRead(LPCSTR filename);

AX1W32API LPVOID __stdcall AX1_FileOpenWrite(LPCSTR filename);

AX1W32API BOOL __stdcall AX1_FileRead(LPVOID buffer,USHORT count);

AX1W32API BOOL __stdcall AX1_FileSeek(ULONG offset);

AX1W32API ULONG __stdcall AX1_FileTell();

AX1W32API BOOL __stdcall AX1_FileWrite(LPVOID buffer,USHORT count);

AX1W32API USHORT __stdcall AX1_GetHigh(ULONG val);

AX1W32API USHORT __stdcall AX1_GetLow(ULONG val);

AX1W32API ERRVAL __stdcall AX1_HandleClose(HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_HandleDel(HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_HandleGet(LPULONG addr0,LPULONG addr1,LPINT cardnum,LPINT devnum,LPULONG sizval,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_HandleIns(LPHCARD lpHandle,LPCSTR cardname,INT cardnum,LPVOID hAppWnd,USHORT uiRemovalMsg);

AX1W32API BOOL __stdcall AX1_HandleOkay(HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_HandleOpen(LPCSTR cardname,INT cardnum,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_HandleOpenWin95(LPCSTR cardname,INT cardnum,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_HandleOpenWinNT(LPCSTR cardname,INT cardnum,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_HandleVer(HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_KernDev(LPINT valueptr,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_KernEnd(LPVOID vxdptr);

AX1W32API ERRVAL __stdcall AX1_KernIntClear(HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_KernIntInstall(LPVOID hEvent,ULONG clraddr,ULONG clrwidth,ULONG clrvalue,ULONG stataddr,ULONG statwidth,ULONG statvalue,ULONG statmask,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_KernIntStatus(LPINT valueptr,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_KernIntUninstall(HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_KernIORdW(LPUSHORT valueptr,INT addrval,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_KernIOWrW(USHORT value,INT addrval,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_KernMEMFillW(USHORT value,INT addrval,INT countval,INT bustype,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_KernMEMRdB(LPBYTE valueptr,INT addrval,INT bustype,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_KernMEMRdL(LPULONG valueptr,INT addrval,INT bustype,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_KernMEMRdsL(LPULONG bufptr,INT addrval,INT countval,INT bustype,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_KernMEMRdsW(LPUSHORT bufptr,INT addrval,INT countval,INT bustype,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_KernMEMRdW(LPUSHORT valueptr,INT addrval,INT bustype,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_KernMEMWrB(BYTE value,INT addrval,INT bustype,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_KernMEMWrL(ULONG value,INT addrval,INT bustype,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_KernMEMWrsL(LPULONG bufptr,INT addrval,INT countval,INT bustype,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_KernMEMWrsW(LPUSHORT bufptr,INT addrval,INT countval,INT bustype,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_KernMEMWrW(USHORT value,INT addrval,INT bustype,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_KernQuick(BOOL flag,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_KernStatus(LPULONG valueptr,ULONG type,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_KernStatusEx(LPULONG valueptr,ULONG type,ULONG index,HCARD handleval);

AX1W32API ULONG __stdcall AX1_MakeLong(USHORT valh,USHORT vall);

AX1W32API ERRVAL __stdcall AX1_MantFromAscii(LPCSTR str,LPULONG mant,LPINT exp);

AX1W32API LPSTR __stdcall AX1_MantToAscii(LPSTR buf,INT mant,INT exp);

AX1W32API ULONG __stdcall AX1_Mask(ULONG dataval,INT cntval);

AX1W32API VOID __stdcall AX1_MaxMant(LPULONG mant,LPINT exp);

AX1W32API VOID __stdcall AX1_MEMWINFillW(USHORT value,ULONG addrval,ULONG countval,INT bustype,HCARD handleval);

AX1W32API BYTE __stdcall AX1_MEMWINRdB(ULONG addrval,INT bustype,HCARD handleval);

AX1W32API ULONG __stdcall AX1_MEMWINRdL(ULONG addrval,INT bustype,HCARD handleval);

AX1W32API VOID __stdcall AX1_MEMWINRdsL(LPULONG valueptr,ULONG addrval,INT countval,INT bustype,HCARD handleval);

AX1W32API VOID __stdcall AX1_MEMWINRdsW(LPUSHORT valueptr,ULONG addrval,INT countval,INT bustype,HCARD handleval);

AX1W32API USHORT __stdcall AX1_MEMWINRdW(ULONG addrval,INT bustype,HCARD handleval);

AX1W32API VOID __stdcall AX1_MEMWINWrB(BYTE value,ULONG addrval,INT bustype,HCARD handleval);

AX1W32API VOID __stdcall AX1_MEMWINWrL(ULONG value,ULONG addrval,INT bustype,HCARD handleval);

AX1W32API VOID __stdcall AX1_MEMWINWrsL(LPULONG valueptr,ULONG addrval,INT countval,INT bustype,HCARD handleval);

AX1W32API VOID __stdcall AX1_MEMWINWrsW(LPUSHORT valueptr,ULONG addrval,INT countval,INT bustype,HCARD handleval);

AX1W32API VOID __stdcall AX1_MEMWINWrW(USHORT value,ULONG addrval,INT bustype,HCARD handleval);

AX1W32API ULONG __stdcall AX1_Mod(ULONG moda,ULONG modb);

AX1W32API ULONG __stdcall AX1_Mul(ULONG mula,ULONG mulb);

AX1W32API ERRVAL __stdcall AX1_NetGetConfig(LPULONG pconfigval,USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_NetSetConfig(ULONG configval,USHORT netid,HCARD handleval);