documentacion/obtenida/ARINC 429/driver and software/LX-AFDX-1/API/AX1W32VB.BAS

Public Declare Function AX1_ErrDesc Lib "AX1W32.DLL" Alias "_AX1_ErrDesc@4" (ByVal errval As Long) As String
Public Declare Function AX1_ErrDescStr Lib "AX1W32.DLL" Alias "_AX1_ErrDescStr@4" (ByVal errval As Long) As String
Public Declare Function AX1_ErrName Lib "AX1W32.DLL" Alias "_AX1_ErrName@4" (ByVal errval As Long) As String
Public Declare Function AX1_ErrNetGetEnable Lib "AX1W32.DLL" Alias "_AX1_ErrNetGetEnable@16" (ByRef pconfigval As Long, ByRef ptrigid As Integer, ByVal netid As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_ErrPktGetConfig Lib "AX1W32.DLL" Alias "_AX1_ErrPktGetConfig@16" (ByRef pconfigval As Long, ByRef pblendflags As Long, ByVal hport As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_ErrPktGetConfigEx Lib "AX1W32.DLL" Alias "_AX1_ErrPktGetConfigEx@32" (ByRef pconfigval As Long, ByRef pblendflags As Long, ByRef ptrigid As Integer, ByRef packet As Byte, ByVal pktlen As Integer, ByRef ptotallen As Integer, ByVal hport As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_ErrRSNGetConfig Lib "AX1W32.DLL" Alias "_AX1_ErrRSNGetConfig@20" (ByRef pconfigval As Long, ByRef ptrigid As Integer, ByRef pmodifier As Long, ByVal hvl As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_ErrXmtGetConfig Lib "AX1W32.DLL" Alias "_AX1_ErrXmtGetConfig@16" (ByRef pconfigval As Long, ByRef ptrigid As Integer, ByVal hport As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_EventGetConfig Lib "AX1W32.DLL" Alias "_AX1_EventGetConfig@8" (ByRef pconfigval As Long, ByVal handleval As Long) As Long
Public Declare Sub AX1_ExpandMant Lib "AX1W32.DLL" Alias "_AX1_ExpandMant@8" (ByRef mant As Long, ByRef exp As Long)
Public Declare Function AX1_FDSCalcOffset Lib "AX1W32.DLL" Alias "_AX1_FDSCalcOffset@20" (ByRef buf As Byte, ByVal fds_desc As FDSDESC, ByVal ds_num As Long) As Long
Public Declare Function AX1_FDSStatusPriority Lib "AX1W32.DLL" Alias "_AX1_FDSStatusPriority@8" (ByVal prevstatus As Byte, ByVal status As Byte) As Byte
Public Declare Sub AX1_FileClose Lib "AX1W32.DLL" Alias "_AX1_FileClose@0" ()
Public Declare Function AX1_FileErr Lib "AX1W32.DLL" Alias "_AX1_FileErr@0" () As Long
Public Declare Sub AX1_FileErrClr Lib "AX1W32.DLL" Alias "_AX1_FileErrClr@0" ()
Public Declare Sub AX1_FileErrSet Lib "AX1W32.DLL" Alias "_AX1_FileErrSet@0" ()
Public Declare Function AX1_FileOpenRead Lib "AX1W32.DLL" Alias "_AX1_FileOpenRead@4" (ByVal filename As String) As Long
Public Declare Function AX1_FileOpenWrite Lib "AX1W32.DLL" Alias "_AX1_FileOpenWrite@4" (ByVal filename As String) As Long
Public Declare Function AX1_FileRead Lib "AX1W32.DLL" Alias "_AX1_FileRead@8" (ByRef buffer As Long, ByVal count As Integer) As Long
Public Declare Function AX1_FileSeek Lib "AX1W32.DLL" Alias "_AX1_FileSeek@4" (ByVal offset As Long) As Long
Public Declare Function AX1_FileTell Lib "AX1W32.DLL" Alias "_AX1_FileTell@0" () As Long
Public Declare Function AX1_FileWrite Lib "AX1W32.DLL" Alias "_AX1_FileWrite@8" (ByRef buffer As Long, ByVal count As Integer) As Long
Public Declare Function AX1_GetHigh Lib "AX1W32.DLL" Alias "_AX1_GetHigh@4" (ByVal val As Long) As Integer
Public Declare Function AX1_GetLow Lib "AX1W32.DLL" Alias "_AX1_GetLow@4" (ByVal val As Long) As Integer
Public Declare Function AX1_HandleClose Lib "AX1W32.DLL" Alias "_AX1_HandleClose@4" (ByVal handleval As Long) As Long
Public Declare Function AX1_HandleDel Lib "AX1W32.DLL" Alias "_AX1_HandleDel@4" (ByVal handleval As Long) As Long
Public Declare Function AX1_HandleGet Lib "AX1W32.DLL" Alias "_AX1_HandleGet@24" (ByRef addr0 As Long, ByRef addr1 As Long, ByRef cardnum As Long, ByRef devnum As Long, ByRef sizval As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_HandleIns Lib "AX1W32.DLL" Alias "_AX1_HandleIns@20" (ByRef lpHandle As Long, ByVal cardname As String, ByVal cardnum As Long, ByRef hAppWnd As Long, ByVal uiRemovalMsg As Integer) As Long
Public Declare Function AX1_HandleOkay Lib "AX1W32.DLL" Alias "_AX1_HandleOkay@4" (ByVal handleval As Long) As Long
Public Declare Function AX1_HandleOpen Lib "AX1W32.DLL" Alias "_AX1_HandleOpen@12" (ByVal cardname As String, ByVal cardnum As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_HandleOpenWin95 Lib "AX1W32.DLL" Alias "_AX1_HandleOpenWin95@12" (ByVal cardname As String, ByVal cardnum As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_HandleOpenWinNT Lib "AX1W32.DLL" Alias "_AX1_HandleOpenWinNT@12" (ByVal cardname As String, ByVal cardnum As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_HandleVer Lib "AX1W32.DLL" Alias "_AX1_HandleVer@4" (ByVal handleval As Long) As Long
Public Declare Function AX1_KernDev Lib "AX1W32.DLL" Alias "_AX1_KernDev@8" (ByRef valueptr As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_KernEnd Lib "AX1W32.DLL" Alias "_AX1_KernEnd@4" (ByRef vxdptr As Long) As Long
Public Declare Function AX1_KernIntClear Lib "AX1W32.DLL" Alias "_AX1_KernIntClear@4" (ByVal handleval As Long) As Long
Public Declare Function AX1_KernIntInstall Lib "AX1W32.DLL" Alias "_AX1_KernIntInstall@36" (ByRef hEvent As Long, ByVal clraddr As Long, ByVal clrwidth As Long, ByVal clrvalue As Long, ByVal stataddr As Long, ByVal statwidth As Long, ByVal statvalue As Long, ByVal statmask As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_KernIntStatus Lib "AX1W32.DLL" Alias "_AX1_KernIntStatus@8" (ByRef valueptr As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_KernIntUninstall Lib "AX1W32.DLL" Alias "_AX1_KernIntUninstall@4" (ByVal handleval As Long) As Long
Public Declare Function AX1_KernIORdW Lib "AX1W32.DLL" Alias "_AX1_KernIORdW@12" (ByRef valueptr As Integer, ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_KernIOWrW Lib "AX1W32.DLL" Alias "_AX1_KernIOWrW@12" (ByVal value As Integer, ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_KernMEMFillW Lib "AX1W32.DLL" Alias "_AX1_KernMEMFillW@20" (ByVal value As Integer, ByVal addrval As Long, ByVal countval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_KernMEMRdB Lib "AX1W32.DLL" Alias "_AX1_KernMEMRdB@16" (ByRef valueptr As Byte, ByVal addrval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_KernMEMRdL Lib "AX1W32.DLL" Alias "_AX1_KernMEMRdL@16" (ByRef valueptr As Long, ByVal addrval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_KernMEMRdsL Lib "AX1W32.DLL" Alias "_AX1_KernMEMRdsL@20" (ByRef bufptr As Long, ByVal addrval As Long, ByVal countval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_KernMEMRdsW Lib "AX1W32.DLL" Alias "_AX1_KernMEMRdsW@20" (ByRef bufptr As Integer, ByVal addrval As Long, ByVal countval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_KernMEMRdW Lib "AX1W32.DLL" Alias "_AX1_KernMEMRdW@16" (ByRef valueptr As Integer, ByVal addrval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_KernMEMWrB Lib "AX1W32.DLL" Alias "_AX1_KernMEMWrB@16" (ByVal value As Byte, ByVal addrval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_KernMEMWrL Lib "AX1W32.DLL" Alias "_AX1_KernMEMWrL@16" (ByVal value As Long, ByVal addrval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_KernMEMWrsL Lib "AX1W32.DLL" Alias "_AX1_KernMEMWrsL@20" (ByRef bufptr As Long, ByVal addrval As Long, ByVal countval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_KernMEMWrsW Lib "AX1W32.DLL" Alias "_AX1_KernMEMWrsW@20" (ByRef bufptr As Integer, ByVal addrval As Long, ByVal countval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_KernMEMWrW Lib "AX1W32.DLL" Alias "_AX1_KernMEMWrW@16" (ByVal value As Integer, ByVal addrval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_KernQuick Lib "AX1W32.DLL" Alias "_AX1_KernQuick@8" (ByVal flag As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_KernStatus Lib "AX1W32.DLL" Alias "_AX1_KernStatus@12" (ByRef valueptr As Long, ByVal typeval As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_KernStatusEx Lib "AX1W32.DLL" Alias "_AX1_KernStatusEx@16" (ByRef valueptr As Long, ByVal typeval As Long, ByVal index As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_MakeLong Lib "AX1W32.DLL" Alias "_AX1_MakeLong@8" (ByVal valh As Integer, ByVal vall As Integer) As Long
Public Declare Function AX1_MantFromAscii Lib "AX1W32.DLL" Alias "_AX1_MantFromAscii@12" (ByVal str As String, ByRef mant As Long, ByRef exp As Long) As Long
Public Declare Function AX1_MantToAscii Lib "AX1W32.DLL" Alias "_AX1_MantToAscii@12" (ByVal buf As String, ByVal mant As Long, ByVal exp As Long) As String
Public Declare Function AX1_Mask Lib "AX1W32.DLL" Alias "_AX1_Mask@8" (ByVal dataval As Long, ByVal cntval As Long) As Long
Public Declare Sub AX1_MaxMant Lib "AX1W32.DLL" Alias "_AX1_MaxMant@8" (ByRef mant As Long, ByRef exp As Long)
Public Declare Sub AX1_MEMWINFillW Lib "AX1W32.DLL" Alias "_AX1_MEMWINFillW@20" (ByVal value As Integer, ByVal addrval As Long, ByVal countval As Long, ByVal bustype As Long, ByVal handleval As Long)
Public Declare Function AX1_MEMWINRdB Lib "AX1W32.DLL" Alias "_AX1_MEMWINRdB@12" (ByVal addrval As Long, ByVal bustype As Long, ByVal handleval As Long) As Byte
Public Declare Function AX1_MEMWINRdL Lib "AX1W32.DLL" Alias "_AX1_MEMWINRdL@12" (ByVal addrval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Sub AX1_MEMWINRdsL Lib "AX1W32.DLL" Alias "_AX1_MEMWINRdsL@20" (ByRef valueptr As Long, ByVal addrval As Long, ByVal countval As Long, ByVal bustype As Long, ByVal handleval As Long)
Public Declare Sub AX1_MEMWINRdsW Lib "AX1W32.DLL" Alias "_AX1_MEMWINRdsW@20" (ByRef valueptr As Integer, ByVal addrval As Long, ByVal countval As Long, ByVal bustype As Long, ByVal handleval As Long)
Public Declare Function AX1_MEMWINRdW Lib "AX1W32.DLL" Alias "_AX1_MEMWINRdW@12" (ByVal addrval As Long, ByVal bustype As Long, ByVal handleval As Long) As Integer
Public Declare Sub AX1_MEMWINWrB Lib "AX1W32.DLL" Alias "_AX1_MEMWINWrB@16" (ByVal value As Byte, ByVal addrval As Long, ByVal bustype As Long, ByVal handleval As Long)
Public Declare Sub AX1_MEMWINWrL Lib "AX1W32.DLL" Alias "_AX1_MEMWINWrL@16" (ByVal value As Long, ByVal addrval As Long, ByVal bustype As Long, ByVal handleval As Long)
Public Declare Sub AX1_MEMWINWrsL Lib "AX1W32.DLL" Alias "_AX1_MEMWINWrsL@20" (ByRef valueptr As Long, ByVal addrval As Long, ByVal countval As Long, ByVal bustype As Long, ByVal handleval As Long)
Public Declare Sub AX1_MEMWINWrsW Lib "AX1W32.DLL" Alias "_AX1_MEMWINWrsW@20" (ByRef valueptr As Integer, ByVal addrval As Long, ByVal countval As Long, ByVal bustype As Long, ByVal handleval As Long)
Public Declare Sub AX1_MEMWINWrW Lib "AX1W32.DLL" Alias "_AX1_MEMWINWrW@16" (ByVal value As Integer, ByVal addrval As Long, ByVal bustype As Long, ByVal handleval As Long)
Public Declare Function AX1_Mod Lib "AX1W32.DLL" Alias "_AX1_Mod@8" (ByVal moda As Long, ByVal modb As Long) As Long
Public Declare Function AX1_Mul Lib "AX1W32.DLL" Alias "_AX1_Mul@8" (ByVal mula As Long, ByVal mulb As Long) As Long
Public Declare Function AX1_NetGetConfig Lib "AX1W32.DLL" Alias "_AX1_NetGetConfig@12" (ByRef pconfigval As Long, ByVal netid As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_NetSetConfig Lib "AX1W32.DLL" Alias "_AX1_NetSetConfig@12" (ByVal configval As Long, ByVal netid As Integer, ByVal handleval As Long) As Long
